--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "markdown-it": "^14.0.0",
+    "prism-theme-night-owl": "^1.4.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "web-vitals": "^2.1.4"
