Updated Projects page & SearchFilter component

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-learn",
-  "version": "0.1.0",
+  "name": "maric-portfolio",
+  "version": "2.3.2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
